# reforgie

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml
mods/citystates/: danzig.toml  kition.toml  luxembourg.toml  template.toml  uruk.toml
mods/civs/perm-estate/: perm-estate.toml
mods/religions/: ajdaha-yilan.toml  ak-jang.toml  ama-lurra.toml  bimo.toml  bon.toml  cimarii-jula.toml  cossus-cult.toml  dal.toml  dii-mauri.toml  eletfa.toml  ese-havurne.toml  gardacvabela.toml  gnosticism.toml  haithn.toml  haldianism.toml  imana.toml  inzakism.toml  irminism.toml  kawaskawas.toml  lupwka.toml  maguzanci.toml  marapu.toml  mastorava.toml  paseteoi.toml  perendianism.toml  redonism.toml  solar-bird-cult.toml  swanco.toml  taivaanaula.toml  trebaruna-cult.toml  vos.toml  waldensianism.toml  zalmoxianism.toml
src/: atlas.py  font_icons.py  icon.py  mod.py  modinfo.py  religion.py  religions_sql.py  sql_insert.py  sql_trigger_replace.py  text.py
src/reforgie/: __init__.py  atlas.py  gamedata.py  icons.py  mod.py  modinfo.py  religion.py  religions_sql.py
src/reforgie/img/: atlas.py  dds_converter.py  ggxml.py  icon.py  icons.py
src/reforgie/meta/: modfile.py  modinfo.py
src/reforgie/xml/: artstyle.py  citystate.py  civ.py  color.py  gamedata.py  leader_scene.py  religion.py  text.py
